do: first day of diplom

--- a/index.html
+++ b/index.html
@@ -4,7 +4,71 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Design Theory</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto&family=Roboto+Condensed&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="header">
+      <div class="container">
+        <div class="header-main">
+          <a class="ehya" src="index.html">
+            <img src="img/ehya-logo.svg" alt="Echya logo" class="ehya-logo" />
+          </a>
+          <div class="header-right">
+            <div class="header-right-navigation">
+              <span class="names-right">Рекомендации</span>
+              <span class="names-right">Книги</span>
+              <span class="names-right">Блог</span>
+            </div>
+            <button class="header-button">Получить</button>
+          </div>
+          <!-- /.header-right -->
+        </div>
+        <!-- /.header-main -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.header -->
+    <section class="theory">
+      <div class="container">
+        <div class="theory-container">
+          <div class="theory-about">
+            <h3 class="theory-about__book">
+              <span class="theory-color">Design Theory: </span
+              >The&nbsp;Psychology of Graphic Design Pricing
+            </h3>
+            <span class="theory-about__author"> КНИГА МИШЕЛЯ ЯНГА </span>
+            <span class="theory-about__description">
+              Спустя 15 лет я управляю собственной студией, выполнив тысячи
+              проектов для крупных клиентов. Теперь я делюсь своими золотыми
+              стратегиями ценообразования на творческую работу.
+            </span>
+            <div class="theory-buttons">
+              <button class="theory-buttons__one">КУПИТЬ СЕЙЧАС</button>
+              <button class="theory-buttons__two">ЧИТАТЬ ДЕМО</button>
+            </div>
+            <!-- /.theory-buttons -->
+          </div>
+          <!-- /.theoty-about -->
+          <div class="theory-book">
+            <img
+              src="img/book-image.jpg"
+              alt="Michael Book"
+              class="theory-image"
+            />
+          </div>
+          <!-- /.theory-book -->
+        </div>
+        <!-- /.theory-container -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.theory -->
+  </body>
+  <script src="js/jquery-3.6.0.min.js"></script>
+  <script src="js/main.js"></script>
 </html>
