do: diplom project

--- a/index.html
+++ b/index.html
@@ -68,6 +68,235 @@
       <!-- /.container -->
     </section>
     <!-- /.theory -->
+    <section class="magazine-books">
+      <div class="container">
+        <div class="books-container">
+          <div class="recomended">
+            <span class="recomended-title">Рекомендации</span>
+            <div class="recomended-wrapper">
+              <div class="recomended-first-column">
+                <div class="book-container">
+                  <div class="book-img">
+                    <img
+                      src="img/first-book.jpg"
+                      alt="First Book"
+                      class="book-img__first"
+                    />
+                  </div>
+                  <div class="book-description">
+                    <span class="book-title">The World of Abstract Art</span>
+                    <span class="book-category">Art & Design</span>
+                    <span class="book-cost">$25.00</span>
+                    <div class="book-button">
+                      <button class="magazine-button">Купить</button>
+                      <img
+                        src="img/heart.svg"
+                        alt="Icon: heart"
+                        class="heart"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <!-- /.book-container -->
+                <div class="book-container">
+                  <div class="book-img">
+                    <img
+                      src="img/second-book.jpg"
+                      alt="Second Book"
+                      class="book-img__first"
+                    />
+                  </div>
+                  <div class="book-description">
+                    <span class="book-title">The Blue Flowers Ray…</span>
+                    <span class="book-category">Novel</span>
+                    <span class="book-cost">$19.50</span>
+                    <div class="book-button">
+                      <button class="magazine-button">Купить</button>
+                      <img
+                        src="img/heart.svg"
+                        alt="Icon: heart"
+                        class="heart"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <!-- /.book-container -->
+                <div class="book-container">
+                  <div class="book-img">
+                    <img
+                      src="img/third-book.jpg"
+                      alt="Third Book"
+                      class="book-img__first"
+                    />
+                  </div>
+                  <div class="book-description">
+                    <span class="book-title">WMNDFL : The Inspiration</span>
+                    <span class="book-category">Business</span>
+                    <span class="book-cost">$23.00</span>
+                    <div class="book-button">
+                      <button class="magazine-button">Купить</button>
+                      <img
+                        src="img/heart.svg"
+                        alt="Icon: heart"
+                        class="heart"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <!-- /.book-container -->
+              </div>
+              <!-- /.recomended-first-column -->
+              <div class="recomended-second-column">
+                <div class="book-container">
+                  <div class="book-img">
+                    <img
+                      src="img/fourth-book.jpg"
+                      alt="Fourth Book"
+                      class="book-img__first"
+                    />
+                  </div>
+                  <div class="book-description">
+                    <span class="book-title">Educated : a Memoir</span>
+                    <span class="book-category">Education</span>
+                    <span class="book-cost">$28.00</span>
+                    <div class="book-button">
+                      <button class="magazine-button">Купить</button>
+                      <img
+                        src="img/heart.svg"
+                        alt="Icon: heart"
+                        class="heart"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <!-- /.book-container -->
+                <div class="book-container">
+                  <div class="book-img">
+                    <img
+                      src="img/fifth-book.jpg"
+                      alt="Fifth Book"
+                      class="book-img__first"
+                    />
+                  </div>
+                  <div class="book-description">
+                    <span class="book-title">There There : a Novel by TO</span>
+                    <span class="book-category">Novel</span>
+                    <span class="book-cost">$20.00</span>
+                    <div class="book-button">
+                      <button class="magazine-button">Купить</button>
+                      <img
+                        src="img/heart.svg"
+                        alt="Icon: heart"
+                        class="heart"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <!-- /.book-container -->
+                <div class="book-container">
+                  <div class="book-img">
+                    <img
+                      src="img/six-book.jpg"
+                      alt="Six Book"
+                      class="book-img__first"
+                    />
+                  </div>
+                  <div class="book-description">
+                    <span class="book-title">Making Things Happen</span>
+                    <span class="book-category">Motivation</span>
+                    <span class="book-cost">$23.00</span>
+                    <div class="book-button">
+                      <button class="magazine-button">Купить</button>
+                      <img
+                        src="img/heart.svg"
+                        alt="Icon: heart"
+                        class="heart"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <!-- /.book-container -->
+              </div>
+              <!-- /.recomended-second-column -->
+            </div>
+            <!-- ./recomended-wrapper -->
+            <button class="recomended-button">БОЛЬШЕ РЕКОМЕНДАЦИЙ</button>
+          </div>
+          <!-- /.recomended -->
+          <div class="best-month">
+            <span class="best-mounth-title">Топ Месяца</span>
+            <div class="best-container">
+              <div class="best-container__right book-container">
+                <div class="book-img">
+                  <img
+                    src="img/seven-book.jpg"
+                    alt="Seven Book"
+                    class="book-img__second"
+                  />
+                </div>
+                <div class="book-description">
+                  <span class="book-title">Sprint : Solve, Test in 5 Days</span>
+                  <span class="book-cost">$23.00</span>
+                  <button class="magazine-button">Купить</button>
+                </div>
+              </div>
+              <!-- ./book-container -->
+              <div class="best-container__right book-container">
+                <div class="book-img">
+                  <img
+                    src="img/eight-book.jpg"
+                    alt="Eight Book"
+                    class="book-img__second"
+                  />
+                </div>
+                <div class="book-description">
+                  <span class="book-title">Hacking Growth Break Problem</span>
+                  <span class="book-cost">$23.00</span>
+                  <button class="magazine-button">Купить</button>
+                </div>
+              </div>
+              <!-- ./book-container -->
+              <div class="best-container__right book-container">
+                <div class="book-img">
+                  <img
+                    src="img/nine-book.jpg"
+                    alt="Nine Book"
+                    class="book-img__second"
+                  />
+                </div>
+                <div class="book-description">
+                  <span class="book-title">Very Nice a Novel by Mercy</span>
+                  <span class="book-cost">$23.00</span>
+                  <button class="magazine-button">Купить</button>
+                </div>
+              </div>
+              <!-- ./book-container -->
+              <div class="best-container__right book-container">
+                <div class="book-img">
+                  <img
+                    src="img/ten-book.jpg"
+                    alt="Nine Book"
+                    class="book-img__second"
+                  />
+                </div>
+                <div class="book-description">
+                  <span class="book-title">Hooked : How to Build Products</span>
+                  <span class="book-cost">$23.00</span>
+                  <button class="magazine-button">Купить</button>
+                </div>
+              </div>
+              <!-- ./book-container -->
+            </div>
+            <!-- /.best-container -->
+            <button class="best-button">ЛУЧШИЕ КНИГИ</button>
+          </div>
+          <!-- /.best-month -->
+        </div>
+        <!-- /.books-container -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.magazine-books -->
   </body>
   <script src="js/jquery-3.6.0.min.js"></script>
   <script src="js/main.js"></script>
