do: diplom project

--- a/index.html
+++ b/index.html
@@ -235,7 +235,9 @@
                   />
                 </div>
                 <div class="book-description">
-                  <span class="book-title">Sprint : Solve, Test in 5 Days</span>
+                  <span class="book-description__right book-title"
+                    >Sprint : Solve, Test in 5 Days</span
+                  >
                   <span class="book-cost">$23.00</span>
                   <button class="magazine-button">Купить</button>
                 </div>
@@ -250,7 +252,9 @@
                   />
                 </div>
                 <div class="book-description">
-                  <span class="book-title">Hacking Growth Break Problem</span>
+                  <span class="book-description__right book-title"
+                    >Hacking Growth Break Problem</span
+                  >
                   <span class="book-cost">$23.00</span>
                   <button class="magazine-button">Купить</button>
                 </div>
@@ -265,7 +269,9 @@
                   />
                 </div>
                 <div class="book-description">
-                  <span class="book-title">Very Nice a Novel by Mercy</span>
+                  <span class="book-description__right book-title"
+                    >Very Nice a Novel by Mercy</span
+                  >
                   <span class="book-cost">$23.00</span>
                   <button class="magazine-button">Купить</button>
                 </div>
@@ -280,13 +286,16 @@
                   />
                 </div>
                 <div class="book-description">
-                  <span class="book-title">Hooked : How to Build Products</span>
+                  <span class="book-description__right book-title"
+                    >Hooked : How to Build Products</span
+                  >
                   <span class="book-cost">$23.00</span>
                   <button class="magazine-button">Купить</button>
                 </div>
               </div>
               <!-- ./book-container -->
             </div>
+            <div class="best-container-line"><div class="line"></div></div>
             <!-- /.best-container -->
             <button class="best-button">ЛУЧШИЕ КНИГИ</button>
           </div>
@@ -297,7 +306,68 @@
       <!-- /.container -->
     </section>
     <!-- /.magazine-books -->
+    <section class="book-slider">
+      <div class="container">
+        <div class="slider-container">
+          <div class="slider-main-line"></div>
+          <!-- /.slider-main-line -->
+          <div class="slider-main">
+            <div class="slider-main__elem">
+              <img
+                src="img/first-slider.svg"
+                alt="First slider picture"
+                class="slider-image"
+              />
+              <span class="slider-description">Бизнес & Финансы</span>
+              <span class="slider-about">Книги про мир бизнеса</span>
+            </div>
+            <!-- /.slider-main__elem -->
+            <div class="slider-main__elem">
+              <img
+                src="img/second-slider.svg"
+                alt="Second slider picture"
+                class="slider-image"
+              />
+              <span class="slider-description">Самомотиватия</span>
+              <span class="slider-about">Книги о мотивации</span>
+            </div>
+            <!-- /.slider-main__elem -->
+            <div class="slider-main__elem">
+              <img
+                src="img/third-slider.svg"
+                alt="Fourth slider picture"
+                class="slider-image"
+              />
+              <span class="slider-description">Романы Теленовеллы</span>
+              <span class="slider-about">Книги с крутыми историями</span>
+            </div>
+            <!-- /.slider-main__elem -->
+            <div class="slider-main__elem">
+              <img
+                src="img/fourth-slider.svg"
+                alt="Fourth slider picture"
+                class="slider-image"
+              />
+              <span class="slider-description">Навыки будущего</span>
+              <span class="slider-about">Книги для самоподготовки </span>
+            </div>
+            <!-- /.slider-main__elem -->
+            <button
+              class="slider-main__button slider-main__button--prev"
+            ></button>
+            <button
+              class="slider-main__button slider-main__button--next"
+            ></button>
+          </div>
+          <!-- /.slider-main -->
+        </div>
+        <!-- /.slider-container -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.book-slider -->
   </body>
-  <script src="js/jquery-3.6.0.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="JS/jquery-3.6.0.min.js"></script>
+  <script src="JS/swiper-bundle.min.js"></script>
+  <script src="JS/main.js"></script>
 </html>
