do: diplom project

--- a/index.html
+++ b/index.html
@@ -366,6 +366,56 @@
       <!-- /.container -->
     </section>
     <!-- /.book-slider -->
+    <section class="unrealised">
+      <div class="container">
+        <div class="unrealised-container">
+          <div class="unrealised-books">
+            <span class="unrealised-title">Неизданные книги</span>
+            <div class="unrealised-buttons">
+              <button
+                class="unrealised__button unrealised__button--next"
+              ></button>
+              <button
+                class="unrealised__button unrealised__button--prev"
+              ></button>
+            </div>
+            <!-- ./unrealized-buttons -->
+          </div>
+          <!-- /.unrealised-books -->
+          <div class="unrealised-books-images">
+            <img
+              src="img/unrealised-first.jpg"
+              alt="First book"
+              class="unrealised-books-images__elem"
+            />
+            <img
+              src="img/unrealised-second.jpg"
+              alt="Second book"
+              class="unrealised-books-images__elem"
+            />
+            <img
+              src="img/unrealised-third.jpg"
+              alt="Third book"
+              class="unrealised-books-images__elem"
+            />
+            <img
+              src="img/unrealised-fourth.jpg"
+              alt="Fourth book"
+              class="unrealised-books-images__elem"
+            />
+            <img
+              src="img/unrealised-fifth.png"
+              alt="Fifth book"
+              class="unrealised-books-images__elem"
+            />
+          </div>
+          <!-- /.unrealised-books-images -->
+        </div>
+        <!-- /.unrealised-container -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.unrealised -->
   </body>
   <script src="JS/jquery-3.6.0.min.js"></script>
   <script src="JS/swiper-bundle.min.js"></script>
