--- a/index.html
+++ b/index.html
@@ -416,6 +416,85 @@
       <!-- /.container -->
     </section>
     <!-- /.unrealised -->
+    <section class="author-story">
+      <div class="container">
+        <div class="author-container">
+          <div class="author-story__about">
+            <span class="author-story__title">История Автора</span>
+            <span class="author-story__who"
+              >Это раздел авторского рассказа. Каждую неделю мы стараемся
+              рассказать вам историю писателя. Расскажем всем о&nbsp;закулисье
+              их книг.
+            </span>
+          </div>
+          <!-- /.author-story__about -->
+          <div class="author-story__videos">
+            <div class="story-videos-main">
+              <img
+                src="img/main-girl.jpg"
+                alt="Image: main girl"
+                class="main-image"
+              />
+              <button class="main-button"></button>
+            </div>
+            <!-- /.story-videos-main -->
+            <div class="story-videos-buttom">
+              <div class="story-videos-buttom__elem">
+                <img
+                  src="img/black-girl.jpg"
+                  alt="Black girl"
+                  class="buttom-image"
+                />
+                <button class="button__elem"></button>
+                <div class="story-videos-buttom__description">
+                  <span class="buttom-name">Emelda Scandroot</span>
+                  <span class="buttom-description">Author of Books Tittle</span>
+                  <img
+                    src="img/icon-author.svg"
+                    alt="Icon author"
+                    class="buttom-icon"
+                  />
+                </div>
+                <!-- /.story-videos-buttom__description -->
+              </div>
+              <div class="story-videos-buttom__elem">
+                <img src="img/white-girl.jpg" alt="" class="buttom-image" />
+                <button class="button__elem"></button>
+                <div class="story-videos-buttom__description">
+                  <span class="buttom-name">Mar Rueda</span>
+                  <span class="buttom-description">Author of Books Tittle</span>
+                  <img
+                    src="img/icon-author.svg"
+                    alt="Icon author"
+                    class="buttom-icon"
+                  />
+                </div>
+                <!-- /.story-videos-buttom__description -->
+              </div>
+              <div class="story-videos-buttom__elem">
+                <img src="img/chinese-man.jpg" alt="" class="buttom-image" />
+                <button class="button__elem"></button>
+                <div class="story-videos-buttom__description">
+                  <span class="buttom-name">Nembo Lukeni</span>
+                  <span class="buttom-description">Author of Books Tittle</span>
+                  <img
+                    src="img/icon-author.svg"
+                    alt="Icon author"
+                    class="buttom-icon"
+                  />
+                </div>
+                <!-- /.story-videos-buttom__description -->
+              </div>
+            </div>
+            <!-- /.story-videos-buttom -->
+          </div>
+          <!-- /.author-story__videos -->
+        </div>
+        <!-- /.author-container -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.author-story -->
   </body>
   <script src="JS/jquery-3.6.0.min.js"></script>
   <script src="JS/swiper-bundle.min.js"></script>
