--- a/index.html
+++ b/index.html
@@ -435,7 +435,11 @@
                 alt="Image: main girl"
                 class="main-image"
               />
-              <button class="main-button"></button>
+              <button
+                class="
+                  story-videos-main__button story-videos-main__button--main
+                "
+              ></button>
             </div>
             <!-- /.story-videos-main -->
             <div class="story-videos-buttom">
@@ -445,45 +449,53 @@
                   alt="Black girl"
                   class="buttom-image"
                 />
-                <button class="button__elem"></button>
+                <img src="img/white-play.svg" alt="Icon: play" class="play" />
                 <div class="story-videos-buttom__description">
                   <span class="buttom-name">Emelda Scandroot</span>
                   <span class="buttom-description">Author of Books Tittle</span>
-                  <img
-                    src="img/icon-author.svg"
-                    alt="Icon author"
-                    class="buttom-icon"
-                  />
                 </div>
                 <!-- /.story-videos-buttom__description -->
+                <img
+                  src="img/icon-author.svg"
+                  alt="Icon author"
+                  class="buttom-icon"
+                />
               </div>
               <div class="story-videos-buttom__elem">
-                <img src="img/white-girl.jpg" alt="" class="buttom-image" />
-                <button class="button__elem"></button>
+                <img
+                  src="img/white-girl.jpg"
+                  alt="White Girl"
+                  class="buttom-image"
+                />
+                <img src="img/white-play.svg" alt="Icon: play" class="play" />
                 <div class="story-videos-buttom__description">
                   <span class="buttom-name">Mar Rueda</span>
                   <span class="buttom-description">Author of Books Tittle</span>
-                  <img
-                    src="img/icon-author.svg"
-                    alt="Icon author"
-                    class="buttom-icon"
-                  />
                 </div>
                 <!-- /.story-videos-buttom__description -->
+                <img
+                  src="img/icon-author.svg"
+                  alt="Icon author"
+                  class="buttom-icon"
+                />
               </div>
               <div class="story-videos-buttom__elem">
-                <img src="img/chinese-man.jpg" alt="" class="buttom-image" />
-                <button class="button__elem"></button>
+                <img
+                  src="img/chinese-man.jpg"
+                  alt="Chinese Man"
+                  class="buttom-image"
+                />
+                <img src="img/white-play.svg" alt="Icon: play" class="play" />
                 <div class="story-videos-buttom__description">
                   <span class="buttom-name">Nembo Lukeni</span>
                   <span class="buttom-description">Author of Books Tittle</span>
-                  <img
-                    src="img/icon-author.svg"
-                    alt="Icon author"
-                    class="buttom-icon"
-                  />
                 </div>
                 <!-- /.story-videos-buttom__description -->
+                <img
+                  src="img/icon-author.svg"
+                  alt="Icon author"
+                  class="buttom-icon"
+                />
               </div>
             </div>
             <!-- /.story-videos-buttom -->
