do: block ehya for diplom

--- a/index.html
+++ b/index.html
@@ -507,6 +507,154 @@
       <!-- /.container -->
     </section>
     <!-- /.author-story -->
+    <section class="publishers">
+      <div class="container">
+        <div class="publishers-container">
+          <span class="publishers-text"
+            >Некоторые из издателей, с которыми мы сотрудничали
+          </span>
+          <!-- /.publishers-text -->
+          <div class="publishers-icons-first">
+            <img
+              src="img/slack-icon.svg"
+              alt="Slack icon"
+              class="publishers-icons-first__elem"
+            /><img
+              src="img/netflix-icon.svg"
+              alt="Neuflix icon"
+              class="publishers-icons-first__elem"
+            /><img
+              src="img/fitbit-icon.svg"
+              alt="Fitbit icon"
+              class="publishers-icons-first__elem"
+            /><img
+              src="img/google-icon.svg"
+              alt="Google icon"
+              class="publishers-icons-first__elem"
+            />
+            <img
+              src="img/airbnb-icon.svg"
+              alt="Airbnb icon"
+              class="publishers-icons-first__elem"
+            /><img
+              src="img/uber-icon.svg"
+              alt="Uber icon"
+              class="publishers-icons-first__elem"
+            />
+          </div>
+          <!-- /.publishers-icons-first -->
+          <div class="publishers-icons-second">
+            <img
+              src="img/netflix-icon.svg"
+              alt="Netflix icon"
+              class="publishers-icons-second__elem"
+            /><img
+              src="img/airbnb-icon.svg"
+              alt="Airbnb icon"
+              class="publishers-icons-second__elem"
+            /><img
+              src="img/slack-icon.svg"
+              alt="Slack icon"
+              class="publishers-icons-second__elem"
+            /><img
+              src="img/uber-icon.svg"
+              alt="Uber icon"
+              class="publishers-icons-second__elem"
+            /><img src="" alt="" class="publishers-icons-second__elem" /><img
+              src="img/fitbit-icon.svg"
+              alt="Fitbit icon"
+              class="publishers-icons-second__elem"
+            /><img
+              src="img/google-icon.svg"
+              alt="Google icon"
+              class="publishers-icons-second__elem"
+            />
+          </div>
+          <!-- /.publishers-icons-second -->
+        </div>
+        <!-- /.publishers-container -->
+      </div>
+      <!-- /.contaier -->
+    </section>
+    <!-- /.publishers -->
+    <section class="blog">
+      <div class="container">
+        <div class="blog-wrapper">
+          <div class="blog-wrapper__up">
+            <span class="blog-title">Ehya Блог</span>
+            <button class="blog-button">Все Блоги</button>
+          </div>
+          <!-- /.blog-wrapper__up -->
+          <div class="blog-wrapper__down">
+            <div class="blog-wrapper__left">
+              <img
+                src="img/ehya-log-img.jpg"
+                alt="Ehya pic"
+                class="blog-img-left"
+              />
+              <span class="blog-steps"
+                >Success Steps For Your Business Life</span
+              >
+              <span class="blog-description"
+                >This is the author story section. Every week we try to give you
+                the story of book writer. Tell all of you the behind the scene
+                of their books.</span
+              >
+            </div>
+            <!-- /.blog-wrapper__left -->
+            <div class="blog-wrapper__rigth">
+              <div class="blog-news">
+                <img
+                  src="img/blog-image-first.jpg"
+                  alt="First picture"
+                  class="blog-img-right"
+                />
+                <div class="blog-things">
+                  <span class="blog-date">23 МАРТА 2020</span>
+                  <span class="blog-do"
+                    >29 Motivational Quotes for Work Environments</span
+                  ><span class="blog-read">ЧИТАТЬ</span>
+                </div>
+              </div>
+              <!-- /.blog-news -->
+              <div class="blog-news">
+                <img
+                  src="img/blog-image-second.jpg"
+                  alt="Second picture"
+                  class="blog-img-right"
+                />
+                <div class="blog-things">
+                  <span class="blog-date">28 МАРТА 2020</span>
+                  <span class="blog-do"
+                    >Learn To Love Growth and You Will Be A Success</span
+                  ><span class="blog-read">ЧИТАТЬ</span>
+                </div>
+              </div>
+              <!-- /.blog-news -->
+              <div class="blog-news">
+                <img
+                  src="img/blog-image-third.jpg"
+                  alt="Third picture"
+                  class="blog-img-right"
+                />
+                <div class="blog-things">
+                  <span class="blog-date">28 МАРТА 2020</span>
+                  <span class="blog-do"
+                    >Motivation How To Build Trust at your Works</span
+                  ><span class="blog-read">ЧИТАТЬ</span>
+                </div>
+              </div>
+              <!-- /.blog-news -->
+            </div>
+            <!-- /.blog-wrapper__rigth -->
+          </div>
+          <!-- /.blog-wrapper__down -->
+        </div>
+        <!-- /.blog-wrapper -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.blog -->
   </body>
   <script src="JS/jquery-3.6.0.min.js"></script>
   <script src="JS/swiper-bundle.min.js"></script>
