do: diplom project

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" href="img/favicon-ehya.ico" type="image/x-icon" />
   </head>
   <body>
     <section class="header">
@@ -598,7 +599,7 @@
               <span class="blog-description"
                 >This is the author story section. Every week we try to give you
                 the story of book writer. Tell all of you the behind the scene
-                of their books.</span
+                of their&nbsp;books.</span
               >
             </div>
             <!-- /.blog-wrapper__left -->
@@ -625,8 +626,8 @@
                 />
                 <div class="blog-things">
                   <span class="blog-date">28 МАРТА 2020</span>
-                  <span class="blog-do"
-                    >Learn To Love Growth and You Will Be A Success</span
+                  <span class="blog-do blog-do--biggest"
+                    >Learn To Love Growth and&nbsp;You Will Be A Success</span
                   ><span class="blog-read">ЧИТАТЬ</span>
                 </div>
               </div>
@@ -655,6 +656,33 @@
       <!-- /.container -->
     </section>
     <!-- /.blog -->
+    <section class="know-first">
+      <div class="container">
+        <div class="know-first-wrapper">
+          <h2 class="know-first-title">
+            Будь первым, кто узнает о наших акциях
+          </h2>
+          <form action="" class="registration">
+            <div class="registration__main">
+              <img
+                src="img/register-icon.svg"
+                alt="Register icon"
+                class="registration__icon"
+              />
+              <input
+                type="email"
+                class="registration__input"
+                placeholder="Ваш Email"
+              />
+            </div>
+            <button class="registration__button">Регистрация</button>
+          </form>
+        </div>
+        <!-- /.know-first-wrapper -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.know-first -->
   </body>
   <script src="JS/jquery-3.6.0.min.js"></script>
   <script src="JS/swiper-bundle.min.js"></script>
