do: diplom project

--- a/index.html
+++ b/index.html
@@ -683,6 +683,83 @@
       <!-- /.container -->
     </section>
     <!-- /.know-first -->
+    <section class="footer">
+      <div class="container">
+        <div class="footer-wrapper">
+          <div class="footer-ehya">
+            <img
+              src="img/ehya-logo.svg"
+              alt="Ehya logo"
+              class="footer-ehya__img"
+            />
+            <span class="footer-ehya__do"
+              >Создайте современный и креативный веб-сайт с crealand</span
+            >
+            <div class="footer-ehya__icons">
+              <a href="https://www.google.ru/" class="footer__link">
+                <img
+                  src="img/ehya-google.svg"
+                  alt="Google icon"
+                  class="footer__icon" /></a
+              ><a href="https://twitter.com/" class="footer__link">
+                <img
+                  src="img/ehya-facebook.svg"
+                  alt="Twitter icon"
+                  class="footer__icon" /></a
+              ><a href="https://www.instagram.com/" class="footer__link">
+                <img
+                  src="img/ehya-inst.svg"
+                  alt="Instagram icon"
+                  class="footer__icon" /></a
+              ><a href="https://ru.linkedin.com/" class="footer__link">
+                <img
+                  src="img/ehya-linkedin.svg"
+                  alt="Linkedin icon"
+                  class="footer__icon"
+                />
+              </a>
+            </div>
+          </div>
+          <!-- ./footer-ehya -->
+          <div class="footer-link">
+            <span class="footer-link__elem footer-link--bold">Продукт</span
+            ><span class="footer-link__elem">Лэндинг</span
+            ><span class="footer-link__elem">Функции</span
+            ><span class="footer-link__elem">Документация</span
+            ><span class="footer-link__elem">Скидки</span
+            ><span class="footer-link__elem">Расценки</span>
+          </div>
+          <!-- /.footer-link -->
+          <div class="footer-link">
+            <span class="footer-link__elem footer-link--bold">Сервисы</span
+            ><span class="footer-link__elem">Документация</span
+            ><span class="footer-link__elem">Дизайн</span
+            ><span class="footer-link__elem">Темы</span
+            ><span class="footer-link__elem">Илюстрации</span
+            ><span class="footer-link__elem">UI Kit</span>
+          </div>
+          <!-- /.footer-link -->
+          <div class="footer-link">
+            <span class="footer-link__elem footer-link--bold">Компания</span
+            ><span class="footer-link__elem">О нас</span
+            ><span class="footer-link__elem">Условия</span
+            ><span class="footer-link__elem">Privacy Policy</span
+            ><span class="footer-link__elem">Careers</span>
+          </div>
+          <!-- /.footer-link -->
+          <div class="footer-link">
+            <span class="footer-link__elem footer-link--bold">Еще..</span
+            ><span class="footer-link__elem">Документация</span
+            ><span class="footer-link__elem">Лицензия</span
+            ><span class="footer-link__elem">Изменения</span>
+          </div>
+          <!-- /.footer-link -->
+        </div>
+        <!-- /.footer-wrapper -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.footer -->
   </body>
   <script src="JS/jquery-3.6.0.min.js"></script>
   <script src="JS/swiper-bundle.min.js"></script>
