do: makrt for diplom without adaptive

--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
             </span>
             <div class="theory-buttons">
               <button class="theory-buttons__one">КУПИТЬ СЕЙЧАС</button>
-              <button class="theory-buttons__two">ЧИТАТЬ ДЕМО</button>
+              <form action="index.html">
+                <button class="theory-buttons__two">ЧИТАТЬ ДЕМО</button>
+              </form>
             </div>
             <!-- /.theory-buttons -->
           </div>
@@ -756,6 +758,19 @@
           <!-- /.footer-link -->
         </div>
         <!-- /.footer-wrapper -->
+        <div class="copyright">
+          <a href="#" class="copyright__link">
+            <img
+              src="img/footer-heart.svg"
+              alt="Footer heart"
+              class="copyright__image"
+            />
+          </a>
+          <span class="copyright__words"
+            >Copyright © 2019. Crafted with love.</span
+          >
+        </div>
+        <!-- /.copyright -->
       </div>
       <!-- /.container -->
     </section>
